Added parent pom and refactored to use abstract ManagedEntity

--- a/quickstart/pom.xml
+++ b/quickstart/pom.xml
@@ -13,6 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <onyx-database.version>0.0.1-alpha</onyx-database.version>
     </properties>
     
     <repositories>
@@ -27,7 +28,7 @@
         <dependency>
             <groupId>com.onyxdevtools</groupId>
             <artifactId>onyx-database</artifactId>
-            <version>0.0.1-alpha</version>
+            <version>${onyx-database.version}</version>
         </dependency>
     </dependencies>
     
