added batch deletion example

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>quickstart</module>
     <module>embedded-persistence-manager</module>
+    <module>persisting-data</module>
   </modules>
 
 </project>
