added cache manager tutorial and staged the other persistence manager examples

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /embedded-persistence-manager copy/target/
 /persisting/target/
 /persisting-data/target/
+/embedded-persistence-manager copy 2/target/
+/caching-persistence-manager/target/
+/remote-persistence-manager/target/
+/restful-web-persistence-manager/target/
+/caching-manager/target/
+/cache-manager/target/
