--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
   <modules>
     <module>quickstart</module>
     <module>embedded-persistence-manager</module>
+    <module>cache-manager</module>
+    <module>remote-persistence-manager</module>
+    <module>restful-web-persistence-manager</module>
     <module>persisting-data</module>
   </modules>
 
