Added Remote Persistence Manager project; got it working

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /restful-web-persistence-manager/target/
 /caching-manager/target/
 /cache-manager/target/
+/remote-persistence-manager/onyx-database-server/target/
