Added relationships as a sub module to it's parent aggregator pom. Also, removed unused imports for the OneToOne example

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>remote-persistence-manager</module>
     <module>restful-web-persistence-manager</module>
     <module>persisting-data</module>
+    <module>relationships</module>
   </modules>
 
 </project>
