Ignore user state

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 *.iml
 /restful-web-persistence-manager/onyx-web-server/target/
 /restful-web-persistence-manager/onyx-database-web-server/target/
+*.xcuserstate
