--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@
 /restful-web-persistence-manager/target/
 /caching-manager/target/
 /cache-manager/target/
+/relationships/target/
 /remote-persistence-manager/onyx-database-server/target/
+/remote-persistence-manager/onyx-database-client/target/
+/relationships/target/
 .idea
 *.iml
 /restful-web-persistence-manager/onyx-web-server/target/
